	* NEWS: Update.
	* src/errdialogs.glade: Add check button to the missing media dialog.
	* src/QuestionDialog.py (MissingMediaDialog.__init__): Add default
	action property.
	* src/ReadXML.py (import_data): Add support for default action.
	* src/plugins/WebPage.py (write_gallery): Use object ID as a file name
	- prevents collision between identical names coming from different dirs.

2004-01-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/AncestorChart2.py: first pass at multipage output

2004-01-16  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.
	* doc/gramps-manual/fr/figures/*.png: Update.

2004-01-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleStore.py: handle unicode conversion from get_value

2004-01-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/AbiWord2Doc.py: pychecker fixes
	* src/docgen/HtmlDoc.py: pychecker fixes
	* src/docgen/KwordDoc.py: pychecker fixes
	* src/docgen/LaTeXDoc.py: pychecker fixes
	* src/docgen/OpenOfficeDoc.py: pychecker fixes
	* src/docgen/OpenSpreadSheet.py: pychecker fixes
	* src/docgen/PSDrawDoc.py: pychecker fixes
	* src/docgen/PdfDoc.py: pychecker fixes
	* src/docgen/SvgDrawDoc.py: pychecker fixes
	* src/plugins/Ancestors.py: pychecker fixes
	* src/plugins/BookReport.py: pychecker fixes
	* src/plugins/CustomBookText.py: pychecker fixes
	* src/plugins/DescendReport.py: pychecker fixes
	* src/plugins/DetAncestralReport.py: pychecker fixes
	* src/plugins/DetDescendantReport.py: pychecker fixes
	* src/plugins/FtmStyleAncestors.py: pychecker fixes
	* src/plugins/IndivComplete.py: pychecker fixes
	* src/plugins/ReadPkg.py: pychecker fixes
	* src/plugins/RelCalc.py: pychecker fixes
	* src/plugins/SimpleBookTitle.py: pychecker fixes
	* src/plugins/TimeLine.py: pychecker fixes
	* src/plugins/WriteCD.py: pychecker fixes
	* src/plugins/WriteFtree.py: pychecker fixes