@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2003  Donald N. Allingham
+# Copyright (C) 2003-2004  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -48,7 +48,7 @@ import Utils
 import GenericFilter
 import Errors
 
-from QuestionDialog import MissingMediaDialog, ErrorDialog
+from QuestionDialog import ErrorDialog
 
 from gettext import gettext as _
 
